--- a/data/unity8.conf
+++ b/data/unity8.conf
@@ -31,7 +31,7 @@ pre-start script
         # Point all future jobs in this session to our Mir socket instead of
         # unity-system-compositor's socket.
         initctl set-env --global MIR_SOCKET=$MIR_SERVER_FILE
-        gdbus call --session --dest org.freedesktop.DBus --object-path /org/freedesktop/DBus --method org.freedesktop.DBus.UpdateActivationEnvironment "@a{ss} {'MIR_SOCKET': '$MIR_SERVER_FILE'}"
+        dbus-update-activation-environment --verbose --systemd MIR_SOCKET=${MIR_SERVER_FILE}
     fi
 
     # Remove the normal and trusted sockets if still there
@@ -82,8 +82,11 @@ post-start script
 end script
 
 post-stop script
+    dbus-update-activation-environment --verbose --systemd MIR_SOCKET=${UNITY_MIR_SOCKET}
     initctl set-env --global MIR_SOCKET=$UNITY_MIR_SOCKET
+    dbus-update-activation-environment --verbose --systemd UNITY_MIR_SOCKET=
     initctl unset-env --global UNITY_MIR_SOCKET
+    dbus-update-activation-environment --verbose --systemd MIR_SERVER_PROMPT_FILE=
     initctl unset-env --global MIR_SERVER_PROMPT_FILE
     initctl emit application-end
 end script
