kgs hacks to only build dash

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,26 +1,26 @@
 # generate desktop files
-configure_file(${SHELL_APP}.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/${SHELL_APP}.desktop @ONLY)
+#configure_file(${SHELL_APP}.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/${SHELL_APP}.desktop @ONLY)
 configure_file(${DASH_APP}.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/${DASH_APP}.desktop @ONLY)
-configure_file(${INDICATORS_CLIENT_APP}.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/${INDICATORS_CLIENT_APP}.desktop @ONLY)
-configure_file(${GREETER_APP}.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/${GREETER_APP}.desktop @ONLY)
+#configure_file(${INDICATORS_CLIENT_APP}.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/${INDICATORS_CLIENT_APP}.desktop @ONLY)
+#configure_file(${GREETER_APP}.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/${GREETER_APP}.desktop @ONLY)
 
 # install desktop files
 install(FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/${SHELL_APP}.desktop
+#    ${CMAKE_CURRENT_BINARY_DIR}/${SHELL_APP}.desktop
     ${CMAKE_CURRENT_BINARY_DIR}/${DASH_APP}.desktop
-    ${CMAKE_CURRENT_BINARY_DIR}/${INDICATORS_CLIENT_APP}.desktop
+#    ${CMAKE_CURRENT_BINARY_DIR}/${INDICATORS_CLIENT_APP}.desktop
     DESTINATION ${CMAKE_INSTALL_DATADIR}/applications
     )
 
-install(FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/${GREETER_APP}.desktop
-    DESTINATION ${CMAKE_INSTALL_DATADIR}/lightdm/greeters
-    )
+#install(FILES
+#    ${CMAKE_CURRENT_BINARY_DIR}/${GREETER_APP}.desktop
+#    DESTINATION ${CMAKE_INSTALL_DATADIR}/lightdm/greeters
+#    )
 
-install(FILES
-    51-unity8-greeter.conf
-    DESTINATION ${CMAKE_INSTALL_DATADIR}/lightdm/lightdm.conf.d
-    )
+#install(FILES
+#    51-unity8-greeter.conf
+#    DESTINATION ${CMAKE_INSTALL_DATADIR}/lightdm/lightdm.conf.d
+#    )
 
 # install dash icon
 install(FILES
@@ -32,4 +32,4 @@ add_custom_target(pkgversion ALL COMMAND dpkg-parsechangelog -l${CMAKE_SOURCE_DI
 
 install(FILES com.canonical.Unity8.gschema.xml DESTINATION ${CMAKE_INSTALL_DATADIR}/glib-2.0/schemas)
 install(FILES unity8-dash.url-dispatcher DESTINATION ${CMAKE_INSTALL_DATADIR}/url-dispatcher/urls)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/version DESTINATION ${CMAKE_INSTALL_LOCALSTATEDIR}/lib/unity8)
+#install(FILES ${CMAKE_CURRENT_BINARY_DIR}/version DESTINATION ${CMAKE_INSTALL_LOCALSTATEDIR}/lib/unity8)
