--- a/tests/mocks/CMakeLists.txt
+++ b/tests/mocks/CMakeLists.txt
@@ -28,24 +28,24 @@ macro(add_unity8_mock PLUGIN VERSION PATH)
     endif()
 endmacro()
 
-add_subdirectory(AccountsService)
-add_subdirectory(Biometryd)
+#add_subdirectory(AccountsService)
+#add_subdirectory(Biometryd)
 add_subdirectory(Cursor)
-add_subdirectory(GSettings.1.0)
-add_subdirectory(indicator-service)
-add_subdirectory(libusermetrics)
-add_subdirectory(LightDM)
-add_subdirectory(Lights)
-add_subdirectory(MeeGo)
-add_subdirectory(Powerd)
-add_subdirectory(QMenuModel)
-add_subdirectory(SessionBroadcast)
-add_subdirectory(Ubuntu)
-add_subdirectory(Unity)
-add_subdirectory(QtMultimedia)
-add_subdirectory(Wizard)
-add_subdirectory(Utils)
-add_subdirectory(UInput)
+#add_subdirectory(GSettings.1.0)
+#add_subdirectory(indicator-service)
+#add_subdirectory(libusermetrics)
+#add_subdirectory(LightDM)
+#add_subdirectory(Lights)
+#add_subdirectory(MeeGo)
+#add_subdirectory(Powerd)
+#add_subdirectory(QMenuModel)
+#add_subdirectory(SessionBroadcast)
+#add_subdirectory(Ubuntu)
+#add_subdirectory(Unity)
+#add_subdirectory(QtMultimedia)
+#add_subdirectory(Wizard)
+#add_subdirectory(Utils)
+#add_subdirectory(UInput)
 
 install(
   DIRECTORY data
