--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -11,20 +11,20 @@ macro(add_unity8_plugin PLUGIN VERSION PATH)
     export_qmlplugin(${PLUGIN} ${VERSION} ${PATH} DESTINATION ${SHELL_INSTALL_QML} ${ARGN})
 endmacro()
 
-add_subdirectory(AccountsService)
-add_subdirectory(Cursor)
-add_subdirectory(GlobalShortcut)
-add_subdirectory(Greeter)
+#add_subdirectory(AccountsService)
+#add_subdirectory(Cursor)
+#add_subdirectory(GlobalShortcut)
+#add_subdirectory(Greeter)
 add_subdirectory(ImageCache)
-add_subdirectory(LightDM)
-add_subdirectory(Lights)
+#add_subdirectory(LightDM)
+#add_subdirectory(Lights)
 add_subdirectory(Dash)
-add_subdirectory(Powerd)
+#add_subdirectory(Powerd)
 add_subdirectory(ScreenshotDirectory)
-add_subdirectory(SessionBroadcast)
-add_subdirectory(Ubuntu)
-add_subdirectory(UInput)
-add_subdirectory(Unity)
-add_subdirectory(Utils)
-add_subdirectory(WindowManager)
-add_subdirectory(Wizard)
+#add_subdirectory(SessionBroadcast)
+#add_subdirectory(Ubuntu)
+#add_subdirectory(UInput)
+#add_subdirectory(Unity)
+#add_subdirectory(Utils)
+#add_subdirectory(WindowManager)
+#add_subdirectory(Wizard)
