--- a/tests/qmltests/CMakeLists.txt
+++ b/tests/qmltests/CMakeLists.txt
@@ -1,99 +1,99 @@
 
-add_subdirectory(Components)
+#add_subdirectory(Components)
 
-add_unity8_qmltest(. OrientedShell)
-add_unity8_qmltest(. DisabledScreenNotice)
-add_unity8_qmltest(. Shell)
-add_unity8_qmltest(. ShellWithPin)
-add_unity8_qmltest(. DeviceConfiguration)
-add_unity8_qmltest(Components Background)
-add_unity8_qmltest(Components Carousel)
-add_unity8_qmltest(Components Dialogs)
-add_unity8_qmltest(Components DraggingArea)
-add_unity8_qmltest(Components LazyImage)
-add_unity8_qmltest(Components Lockscreen)
-add_unity8_qmltest(Components MediaServices)
-add_unity8_qmltest(Components ModeSwitchWarningDialog)
-add_unity8_qmltest(Components PhysicalKeysMapper)
-add_unity8_qmltest(Components Rating)
-add_unity8_qmltest(Components ResponsiveGridView)
-add_unity8_qmltest(Components ResponsiveVerticalJournal)
-add_unity8_qmltest(Components SharingPicker)
-add_unity8_qmltest(Components Showable)
-add_unity8_qmltest(Components VirtualTouchPad)
-add_unity8_qmltest(Components WallpaperResolver)
-add_unity8_qmltest(Components ZoomableImage)
-add_unity8_qmltest(Dash Dash)
-add_unity8_qmltest(Dash DashContent)
-add_unity8_qmltest(Dash DashShell)
-add_unity8_qmltest(Dash Card)
-add_unity8_qmltest(Dash CardCarousel)
-add_unity8_qmlbenchmark(Dash CardBenchmark 1000)
-add_unity8_qmltest(Dash CardTool)
-add_unity8_qmltest(Dash GenericScopeView)
-add_unity8_qmltest(Dash DashPageHeader)
-add_unity8_qmltest(Dash PreviewView)
-add_unity8_qmltest(Dash/Previews Preview)
-add_unity8_qmltest(Dash/Previews PreviewActions)
-add_unity8_qmltest(Dash/Previews PreviewAudioPlayback)
-add_unity8_qmltest(Dash/Previews PreviewComment)
-add_unity8_qmltest(Dash/Previews PreviewCommentInput)
-add_unity8_qmltest(Dash/Previews PreviewExpandable)
-add_unity8_qmltest(Dash/Previews PreviewHeader)
-add_unity8_qmltest(Dash/Previews PreviewIconActions)
-add_unity8_qmltest(Dash/Previews PreviewImageGallery)
-add_unity8_qmltest(Dash/Previews PreviewInlineVideo)
-add_unity8_qmltest(Dash/Previews PreviewMediaToolbar)
-add_unity8_qmltest(Dash/Previews PreviewPayments)
-add_unity8_qmltest(Dash/Previews PreviewProgress)
-add_unity8_qmltest(Dash/Previews PreviewRatingDisplay)
-add_unity8_qmltest(Dash/Previews PreviewRatingDisplayCreationRanges)
-add_unity8_qmltest(Dash/Previews PreviewRatingEdit)
-add_unity8_qmltest(Dash/Previews PreviewRatingInput)
-add_unity8_qmltest(Dash/Previews PreviewTable)
-add_unity8_qmltest(Dash/Previews PreviewTextSummary)
-add_unity8_qmltest(Dash/Previews PreviewVideoPlayback)
-add_unity8_qmltest(Dash/Previews PreviewWidgetFactory)
-add_unity8_qmltest(Dash/Previews PreviewZoomableImage)
-add_unity8_qmltest(Dash/Filters FilterOptionSelector)
-add_unity8_qmltest(Dash/Filters FilterRangeInput)
-add_unity8_qmltest(Dash/Filters FilterValueSlider)
-add_unity8_qmltest(Dash/Filters FilterWidgetFactory)
-add_unity8_qmltest(Dash/Filters FilterExpandableWidget)
-add_unity8_qmltest(Dash/ScopeSettings ScopeSettingBoolean)
-add_unity8_qmltest(Dash/ScopeSettings ScopeSettingList)
-add_unity8_qmltest(Dash/ScopeSettings ScopeSettingNumber)
-add_unity8_qmltest(Dash/ScopeSettings ScopeSettingString)
-add_unity8_qmltest(Dash/ScopeSettings ScopeSettingsWidgetFactory)
-add_unity8_qmltest(Greeter Clock)
-add_unity8_qmltest(Greeter Greeter)
-add_unity8_qmltest(Greeter Infographics)
-add_unity8_qmltest(Greeter NarrowView)
-add_unity8_qmltest(Greeter WideView)
-add_unity8_qmltest(Launcher Launcher)
-add_unity8_qmltest(Notifications Notifications)
-add_unity8_qmltest(Notifications VisualSnapDecisionsQueue)
-add_unity8_qmltest(Notifications OptionToggle)
-add_unity8_qmltest(Notifications SwipeToAct)
-add_unity8_qmltest(Panel ActiveCallHint)
-add_unity8_qmltest(Panel IndicatorItem)
-add_unity8_qmltest(Panel IndicatorItemRow)
-add_unity8_qmltest(Panel IndicatorPage)
-add_unity8_qmltest(Panel IndicatorsBar)
-add_unity8_qmltest(Panel IndicatorsMenu)
-add_unity8_qmltest(Panel MenuContent)
-add_unity8_qmltest(Panel Panel)
-add_unity8_qmltest(Panel/Indicators IndicatorsLight)
-add_unity8_qmltest(Panel/Indicators MenuItemFactory)
-add_unity8_qmltest(Panel/Indicators MessageMenuItemFactory)
-add_unity8_qmltest(Stages ApplicationWindow)
-add_unity8_qmltest(Stages DesktopStage)
-add_unity8_qmltest(Stages PhoneStage)
-add_unity8_qmltest(Stages SpreadDelegate)
-add_unity8_qmltest(Stages SurfaceContainer)
-add_unity8_qmltest(Stages TabletStage)
-add_unity8_qmltest(Stages WindowResizeArea)
-add_unity8_qmltest(Stages Splash)
-add_unity8_qmltest(Tutorial Tutorial)
-add_unity8_qmltest(Wizard Wizard ENVIRONMENT "OXIDE_NO_SANDBOX=1")
-add_unity8_qmltest(utils/Unity/Test UnityTest)
+#add_unity8_qmltest(. OrientedShell)
+#add_unity8_qmltest(. DisabledScreenNotice)
+#add_unity8_qmltest(. Shell)
+#add_unity8_qmltest(. ShellWithPin)
+#add_unity8_qmltest(. DeviceConfiguration)
+#add_unity8_qmltest(Components Background)
+#add_unity8_qmltest(Components Carousel)
+#add_unity8_qmltest(Components Dialogs)
+#add_unity8_qmltest(Components DraggingArea)
+#add_unity8_qmltest(Components LazyImage)
+#add_unity8_qmltest(Components Lockscreen)
+#add_unity8_qmltest(Components MediaServices)
+#add_unity8_qmltest(Components ModeSwitchWarningDialog)
+#add_unity8_qmltest(Components PhysicalKeysMapper)
+#add_unity8_qmltest(Components Rating)
+#add_unity8_qmltest(Components ResponsiveGridView)
+#add_unity8_qmltest(Components ResponsiveVerticalJournal)
+#add_unity8_qmltest(Components SharingPicker)
+#add_unity8_qmltest(Components Showable)
+#add_unity8_qmltest(Components VirtualTouchPad)
+#add_unity8_qmltest(Components WallpaperResolver)
+#add_unity8_qmltest(Components ZoomableImage)
+#add_unity8_qmltest(Dash Dash)
+#add_unity8_qmltest(Dash DashContent)
+#add_unity8_qmltest(Dash DashShell)
+#add_unity8_qmltest(Dash Card)
+#add_unity8_qmltest(Dash CardCarousel)
+#add_unity8_qmlbenchmark(Dash CardBenchmark 1000)
+#add_unity8_qmltest(Dash CardTool)
+#add_unity8_qmltest(Dash GenericScopeView)
+#add_unity8_qmltest(Dash DashPageHeader)
+#add_unity8_qmltest(Dash PreviewView)
+#add_unity8_qmltest(Dash/Previews Preview)
+#add_unity8_qmltest(Dash/Previews PreviewActions)
+#add_unity8_qmltest(Dash/Previews PreviewAudioPlayback)
+#add_unity8_qmltest(Dash/Previews PreviewComment)
+#add_unity8_qmltest(Dash/Previews PreviewCommentInput)
+#add_unity8_qmltest(Dash/Previews PreviewExpandable)
+#add_unity8_qmltest(Dash/Previews PreviewHeader)
+#add_unity8_qmltest(Dash/Previews PreviewIconActions)
+#add_unity8_qmltest(Dash/Previews PreviewImageGallery)
+#add_unity8_qmltest(Dash/Previews PreviewInlineVideo)
+#add_unity8_qmltest(Dash/Previews PreviewMediaToolbar)
+#add_unity8_qmltest(Dash/Previews PreviewPayments)
+#add_unity8_qmltest(Dash/Previews PreviewProgress)
+#add_unity8_qmltest(Dash/Previews PreviewRatingDisplay)
+#add_unity8_qmltest(Dash/Previews PreviewRatingDisplayCreationRanges)
+#add_unity8_qmltest(Dash/Previews PreviewRatingEdit)
+#add_unity8_qmltest(Dash/Previews PreviewRatingInput)
+#add_unity8_qmltest(Dash/Previews PreviewTable)
+#add_unity8_qmltest(Dash/Previews PreviewTextSummary)
+#add_unity8_qmltest(Dash/Previews PreviewVideoPlayback)
+#add_unity8_qmltest(Dash/Previews PreviewWidgetFactory)
+#add_unity8_qmltest(Dash/Previews PreviewZoomableImage)
+#add_unity8_qmltest(Dash/Filters FilterOptionSelector)
+#add_unity8_qmltest(Dash/Filters FilterRangeInput)
+#add_unity8_qmltest(Dash/Filters FilterValueSlider)
+#add_unity8_qmltest(Dash/Filters FilterWidgetFactory)
+#add_unity8_qmltest(Dash/Filters FilterExpandableWidget)
+#add_unity8_qmltest(Dash/ScopeSettings ScopeSettingBoolean)
+#add_unity8_qmltest(Dash/ScopeSettings ScopeSettingList)
+#add_unity8_qmltest(Dash/ScopeSettings ScopeSettingNumber)
+#add_unity8_qmltest(Dash/ScopeSettings ScopeSettingString)
+#add_unity8_qmltest(Dash/ScopeSettings ScopeSettingsWidgetFactory)
+#add_unity8_qmltest(Greeter Clock)
+#add_unity8_qmltest(Greeter Greeter)
+#add_unity8_qmltest(Greeter Infographics)
+#add_unity8_qmltest(Greeter NarrowView)
+#add_unity8_qmltest(Greeter WideView)
+#add_unity8_qmltest(Launcher Launcher)
+#add_unity8_qmltest(Notifications Notifications)
+#add_unity8_qmltest(Notifications VisualSnapDecisionsQueue)
+#add_unity8_qmltest(Notifications OptionToggle)
+#add_unity8_qmltest(Notifications SwipeToAct)
+#add_unity8_qmltest(Panel ActiveCallHint)
+#add_unity8_qmltest(Panel IndicatorItem)
+#add_unity8_qmltest(Panel IndicatorItemRow)
+#add_unity8_qmltest(Panel IndicatorPage)
+#add_unity8_qmltest(Panel IndicatorsBar)
+#add_unity8_qmltest(Panel IndicatorsMenu)
+#add_unity8_qmltest(Panel MenuContent)
+#add_unity8_qmltest(Panel Panel)
+#add_unity8_qmltest(Panel/Indicators IndicatorsLight)
+#add_unity8_qmltest(Panel/Indicators MenuItemFactory)
+#add_unity8_qmltest(Panel/Indicators MessageMenuItemFactory)
+#add_unity8_qmltest(Stages ApplicationWindow)
+#add_unity8_qmltest(Stages DesktopStage)
+#add_unity8_qmltest(Stages PhoneStage)
+#add_unity8_qmltest(Stages SpreadDelegate)
+#add_unity8_qmltest(Stages SurfaceContainer)
+#add_unity8_qmltest(Stages TabletStage)
+#add_unity8_qmltest(Stages WindowResizeArea)
+#add_unity8_qmltest(Stages Splash)
+#add_unity8_qmltest(Tutorial Tutorial)
+#add_unity8_qmltest(Wizard Wizard ENVIRONMENT "OXIDE_NO_SANDBOX=1")
+#add_unity8_qmltest(utils/Unity/Test UnityTest)
