add tst_Dashboard (based on tst_Shell)

--- a/tests/qmltests/CMakeLists.txt
+++ b/tests/qmltests/CMakeLists.txt
@@ -29,6 +29,7 @@ add_unity8_qmltest(Components VirtualTouchPad)
 add_unity8_qmltest(Components WallpaperResolver)
 add_unity8_qmltest(Components ZoomableImage)
 add_unity8_qmltest(Dash Dash)
+add_unity8_qmltest(Dash Dashboard)
 add_unity8_qmltest(Dash DashContent)
 add_unity8_qmltest(Dash DashShell)
 add_unity8_qmltest(Dash Card)
