Use configure_file to copy record.py to bin dir.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -12,3 +12,5 @@ install(TARGETS ${SCOPE_TOOL}
     )
 
 install(FILES unlock-device DESTINATION ${SHELL_APP_DIR})
+
+configure_file(record.py ${PROJECT_BINARY_DIR}/tools/record.py COPYONLY)
