--- a/debian/control
+++ b/debian/control
@@ -209,6 +209,8 @@ Depends: dbus-test-runner,
          parallel,
          qt5-default,
          qtdeclarative5-dev-tools,
+         python-lxml,
+         recordmydesktop,
          unity8 (= ${source:Version}),
          xvfb,
          ${misc:Depends},
