Install python3-lxml.

--- a/debian/control
+++ b/debian/control
@@ -209,7 +209,7 @@ Depends: dbus-test-runner,
          parallel,
          qt5-default,
          qtdeclarative5-dev-tools,
-         python-lxml,
+         python3-lxml,
          recordmydesktop,
          unity8 (= ${source:Version}),
          xvfb,
