use qtmir::guiapp

--- a/debian/control
+++ b/debian/control
@@ -68,6 +68,7 @@ Build-Depends: cmake,
                qtdeclarative5-private-dev (>= 5.6),
                qtdeclarative5-ubuntu-content1,
                qtdeclarative5-ubuntu-settings-components (>= 0.11),
+               qtmir-dev (>= 0.6.0),
                ttf-ubuntu-font-family,
                xvfb,
 Standards-Version: 3.9.4
@@ -131,6 +132,7 @@ Depends: dmz-cursor-theme,
          qml-module-ubuntu-web,
          qtdeclarative5-qtmir-plugin (>= 0.4.8),
          qtdeclarative5-ubuntu-telephony0.1,
+         qtmir-desktop (>= 0.6.0) | qtmir-android (>= 0.6.0),
          ubuntu-system-settings (>= 0.4),
          unity-launcher-impl-10,
          unity8-common (= ${source:Version}),
