--- a/tests/qmltests/CMakeLists.txt
+++ b/tests/qmltests/CMakeLists.txt
@@ -5,16 +5,16 @@ add_unity8_qmltest(. OrientedShell)
 add_unity8_qmltest(. DisabledScreenNotice)
 add_unity8_qmltest(. Shell)
 add_unity8_qmltest(. ShellWithPin)
-add_unity8_qmltest(. DeviceConfiguration)
+add_unity8_simpleqmltest(. DeviceConfiguration)
 add_unity8_qmltest_data(. EdgeBarrierControls)
 add_unity8_qmltest_data(. ApplicationMenuDataLoader)
-add_unity8_qmltest(ApplicationMenus MenuBar)
-add_unity8_qmltest(ApplicationMenus MenuPopup)
-add_unity8_qmltest(Components Background)
-add_unity8_qmltest(Components Carousel)
+add_unity8_simpleqmltest(ApplicationMenus MenuBar)
+add_unity8_simpleqmltest(ApplicationMenus MenuPopup)
+add_unity8_simpleqmltest(Components Background)
+add_unity8_simpleqmltest(Components Carousel)
 add_unity8_qmltest(Components Dialogs)
-add_unity8_qmltest(Components DraggingArea)
-add_unity8_qmltest(Components LazyImage)
+add_unity8_simpleqmltest(Components DraggingArea)
+add_unity8_simpleqmltest(Components LazyImage)
 add_unity8_qmltest_data(Components tst_LazyImage)
 add_unity8_qmltest(Components Lockscreen)
 add_unity8_qmltest(Components MediaServices)
@@ -28,7 +28,7 @@ add_unity8_qmltest(Components Showable)
 add_unity8_qmltest(Components VirtualTouchPad)
 add_unity8_qmltest(Components WallpaperResolver)
 add_unity8_qmltest(Components ZoomableImage)
-add_unity8_qmltest(Dash Dash)
+add_unity8_simpleqmltest(Dash Dash)
 add_unity8_qmltest(Dash DashContent)
 add_unity8_qmltest(Dash DashShell)
 add_unity8_qmltest(Dash Card)
