fixed pacakging req

--- a/debian/control
+++ b/debian/control
@@ -31,6 +31,7 @@ Build-Depends: cmake,
                libqmenumodel-dev (>= 0.2.11),
                libqt5svg5-dev,
                libqt5xmlpatterns5-dev,
+               libqtmirserver-dev (>= 0.6.0),
                libsystemsettings-dev,
                libubuntu-app-launch2-dev,
                libubuntu-download-manager-common-dev,
@@ -68,7 +69,6 @@ Build-Depends: cmake,
                qtdeclarative5-private-dev (>= 5.6),
                qtdeclarative5-ubuntu-content1,
                qtdeclarative5-ubuntu-settings-components (>= 0.11),
-               qtmir-dev (>= 0.6.0),
                ttf-ubuntu-font-family,
                xvfb,
 Standards-Version: 3.9.4
