Add dashboard manager and test

--- a/tests/qmltests/CMakeLists.txt
+++ b/tests/qmltests/CMakeLists.txt
@@ -41,6 +41,7 @@ add_unity8_qmltest(Dash PreviewView)
 add_unity8_qmltest_data(Dash artwork)
 add_unity8_qmltest_data(Dash CardHelpers.js)
 add_unity8_qmltest_data(Dash tst_PageHeader)
+add_unity8_qmltest_(Dash/Dashboard DashboardManager)
 add_unity8_qmltest(Dash/Previews Preview)
 add_unity8_qmltest(Dash/Previews PreviewActions)
 add_unity8_qmltest(Dash/Previews PreviewAudioPlayback)
