--- a/debian/control
+++ b/debian/control
@@ -157,6 +157,7 @@ Architecture: all
 Depends: qml-module-qtquick-layouts,
          qml-module-ubuntu-components (>= 1.3.2030) | qml-module-ubuntu-components-gles (>= 1.3.2030),
          qml-module-ubuntu-thumbnailer0.1 | ubuntu-thumbnailer-impl,
+         qtdeclarative5-qtmir-plugin | unity-application-impl,
          qtdeclarative5-ubuntu-settings-components (>= 0.11),
          qtdeclarative5-unity-notifications-plugin (>= 0.1.2) | unity-notifications-impl,
          qttranslations5-l10n,
@@ -166,7 +167,6 @@ Depends: qml-module-qtquick-layouts,
          unity-notifications-impl-3,
          unity-plugin-scopes | unity-scopes-impl,
          unity-scopes-impl-12,
-         unity8-tests | unity-application-impl,
          ${misc:Depends},
 Breaks: unity8 (<< 7.86),
 Replaces: unity8 (<< 7.86),
