--- a/tests/qmltests/CMakeLists.txt
+++ b/tests/qmltests/CMakeLists.txt
@@ -107,7 +107,8 @@ add_unity8_qmltest(Stage WindowResizeArea)
 add_unity8_qmltest(Stage Splash)
 add_unity8_qmltest(Stage DecoratedWindow)
 add_unity8_qmltest(Stage WindowDecoration)
-add_unity8_qmltest_data(Stage ApplicationCheckBox)
+add_unity8_qmltest_data(Stage ApplicationControls)
+add_unity8_qmltest_data(Stage ApplicationInstanceControls)
 add_unity8_qmltest_data(Stage SizeHintField)
 add_unity8_qmltest_data(Stage SurfaceManagerControls)
 add_unity8_qmltest_data(Stage SurfaceManagerField)
