--- a/plugins/WindowManager/CMakeLists.txt
+++ b/plugins/WindowManager/CMakeLists.txt
@@ -1,8 +1,11 @@
 set(WINDOWMANAGER_SRC
+    AllApplicationInstances.cpp
     TopLevelWindowModel.cpp
     Window.cpp
     WindowManagerPlugin.cpp
     ${APPLICATION_API_INCLUDEDIR}/unity/shell/application/ApplicationInfoInterface.h
+    ${APPLICATION_API_INCLUDEDIR}/unity/shell/application/ApplicationInstanceInterface.h
+    ${APPLICATION_API_INCLUDEDIR}/unity/shell/application/ApplicationInstanceListInterface.h
     ${APPLICATION_API_INCLUDEDIR}/unity/shell/application/Mir.h
     ${APPLICATION_API_INCLUDEDIR}/unity/shell/application/MirSurfaceInterface.h
     ${APPLICATION_API_INCLUDEDIR}/unity/shell/application/MirSurfaceListInterface.h
