First (unfinished) pass at systemd unit for unity8

--- a/tests/plugins/Unity/Session/CMakeLists.txt
+++ b/tests/plugins/Unity/Session/CMakeLists.txt
@@ -60,6 +60,7 @@ install(TARGETS sessionbackendtestExec
 
 add_unity8_unittest(SessionBackend dbus-test-runner
     ENVIRONMENT LD_PRELOAD=$<TARGET_FILE:SessionBackendTestPreload>
+                XDG_SESSION_ID=testing
                 XDG_SESSION_PATH=/session
     ARG_PREFIX "--parameter"
     ARGS
